fixed deprecated calls for Boolean [3191]