@@ -335,7 +335,7 @@ public class PluginManager extends IdvManager {
                     GuiUtils.makeImageButton("/auxdata/ui/icons/Save16.gif",
                                              this, "viewPluginFile",
                                              new Object[] { jarFile,
-                        entry, new Boolean(true) });
+                        entry, Boolean.valueOf(true) });
                 exportBtn.setToolTipText("Export this file");
 
                 Insets     btnInsets = new Insets(1, 1, 1, 5);
@@ -2374,7 +2374,7 @@ public class PluginManager extends IdvManager {
         if (show == null) {
             show = Boolean.FALSE;
         } else {
-            show = new Boolean( !show.booleanValue());
+            show = Boolean.valueOf( !show.booleanValue());
         }
         categoryToggle.put(category, show);
         updatePlugins(false);
@@ -2522,7 +2522,7 @@ public class PluginManager extends IdvManager {
             StringBuffer catBuff  = (StringBuffer) catBuffs.get(category);
             Boolean      show     = (Boolean) categoryToggle.get(category);
             if (show == null) {
-                show = new Boolean(false);
+                show = Boolean.valueOf(false);
                 categoryToggle.put(category, show);
             }
             String toggleHref =
